MALanguage/src/MALanguage.java
/* MALanguage.java */
/* Generated By:JavaCC: Do not edit this line. MALanguage.java */
public class MALanguage implements MALanguageConstants {
  public static void main(String args []) throws ParseException
  {
    MALanguage parser = new MALanguage(System.in);
    while (true)
    {
      System.out.println("ikimasho: \u005cn");
      try
      {
        parser.principal();
      }
      catch (Exception e)
      {
        System.out.println("chotto matte.");
        System.out.println(e.getMessage());
        MALanguage.ReInit(System.in);
      }
      catch (Error e)
      {
        System.out.println("yamerooo.");
        System.out.println(e.getMessage());
        break;
      }
    }
  }

  static final public void principal() throws ParseException {
    jj_consume_token(INICIOPROGRAMA);
    jj_consume_token(INICIOBLOCO);
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case REAL:
      case BOOLEAN:
      case INTEIRO:
      case LETRA:
      case STRING:
      case DIGITO:
      case IDENTIFICADOR:
      case IF:
      case FOR:
      case FUNC:
      case WHILE:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      comandos();
    }
    jj_consume_token(FIMBLOCO);
    jj_consume_token(FIMPROGRAMA);
  }

  static final public void comandos() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case IF:{
      condicional();
      break;
      }
    case REAL:
    case BOOLEAN:
    case INTEIRO:
    case LETRA:
    case STRING:{
      declaracaoVariavel();
      break;
      }
    case FOR:
    case WHILE:{
      repeticao();
      break;
      }
    case FUNC:{
      function();
      break;
      }
    case DIGITO:
    case IDENTIFICADOR:{
      stmt();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void function() throws ParseException {
    jj_consume_token(FUNC);
    jj_consume_token(LPAR);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DIGITO:
      case IDENTIFICADOR:
      case ISTRING:
      case TRUE:
      case FALSE:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IDENTIFICADOR:{
        jj_consume_token(IDENTIFICADOR);
        break;
        }
      case DIGITO:
      case ISTRING:
      case TRUE:
      case FALSE:{
        dado();
        break;
        }
      default:
        jj_la1[3] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case SEPARADOR:{
          ;
          break;
          }
        default:
          jj_la1[4] = jj_gen;
          break label_3;
        }
        jj_consume_token(SEPARADOR);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IDENTIFICADOR:{
          jj_consume_token(IDENTIFICADOR);
          break;
          }
        case DIGITO:
        case ISTRING:
        case TRUE:
        case FALSE:{
          dado();
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
    }
    jj_consume_token(RPAR);
    jj_consume_token(FIMINSTRUCAO);
  }

  static final public void stmt() throws ParseException {
    expressao();
    jj_consume_token(FIMINSTRUCAO);
  }

  static final public void condicional() throws ParseException {
    jj_consume_token(IF);
    jj_consume_token(LPAR);
    expressao();
    jj_consume_token(RPAR);
    jj_consume_token(INICIOBLOCO);
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case REAL:
      case BOOLEAN:
      case INTEIRO:
      case LETRA:
      case STRING:
      case FOR:
      case WHILE:{
        ;
        break;
        }
      default:
        jj_la1[6] = jj_gen;
        break label_4;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case REAL:
      case BOOLEAN:
      case INTEIRO:
      case LETRA:
      case STRING:{
        declaracaoVariavel();
        break;
        }
      case FOR:
      case WHILE:{
        repeticao();
        break;
        }
      default:
        jj_la1[7] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(FIMBLOCO);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ELSE:{
      jj_consume_token(ELSE);
      jj_consume_token(INICIOBLOCO);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case REAL:
        case BOOLEAN:
        case INTEIRO:
        case LETRA:
        case STRING:
        case FOR:
        case WHILE:{
          ;
          break;
          }
        default:
          jj_la1[8] = jj_gen;
          break label_5;
        }
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case REAL:
        case BOOLEAN:
        case INTEIRO:
        case LETRA:
        case STRING:{
          declaracaoVariavel();
          break;
          }
        case FOR:
        case WHILE:{
          repeticao();
          break;
          }
        default:
          jj_la1[9] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
      }
      jj_consume_token(FIMBLOCO);
      break;
      }
    default:
      jj_la1[10] = jj_gen;
      ;
    }
  }

  static final public void repeticao() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case FOR:{
      jj_consume_token(FOR);
      jj_consume_token(LPAR);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DIGITO:{
        numero();
        break;
        }
      case IDENTIFICADOR:{
        jj_consume_token(IDENTIFICADOR);
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(RPAR);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case INICIOBLOCO:{
        jj_consume_token(INICIOBLOCO);
        label_6:
        while (true) {
          switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
          case REAL:
          case BOOLEAN:
          case INTEIRO:
          case LETRA:
          case STRING:
          case DIGITO:
          case IDENTIFICADOR:
          case IF:
          case FOR:
          case FUNC:
          case WHILE:{
            ;
            break;
            }
          default:
            jj_la1[12] = jj_gen;
            break label_6;
          }
          comandos();
        }
        jj_consume_token(FIMBLOCO);
        break;
        }
      default:
        jj_la1[13] = jj_gen;
        ;
      }
      break;
      }
    case WHILE:{
      jj_consume_token(WHILE);
      jj_consume_token(LPAR);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DIGITO:
      case IDENTIFICADOR:{
        expressao();
        break;
        }
      default:
        jj_la1[14] = jj_gen;
        ;
      }
      jj_consume_token(RPAR);
      jj_consume_token(INICIOBLOCO);
      label_7:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case REAL:
        case BOOLEAN:
        case INTEIRO:
        case LETRA:
        case STRING:
        case DIGITO:
        case IDENTIFICADOR:
        case IF:
        case FOR:
        case FUNC:
        case WHILE:{
          ;
          break;
          }
        default:
          jj_la1[15] = jj_gen;
          break label_7;
        }
        comandos();
      }
      jj_consume_token(FIMBLOCO);
      break;
      }
    default:
      jj_la1[16] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void expressao() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DIGITO:{
      numero();
      break;
      }
    case IDENTIFICADOR:{
      jj_consume_token(IDENTIFICADOR);
      break;
      }
    default:
      jj_la1[17] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case OPERADOR_LOGICO:{
      jj_consume_token(OPERADOR_LOGICO);
      break;
      }
    case OPERADOR_ARITMETICO:{
      jj_consume_token(OPERADOR_ARITMETICO);
      break;
      }
    default:
      jj_la1[18] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DIGITO:{
      numero();
      break;
      }
    case IDENTIFICADOR:{
      jj_consume_token(IDENTIFICADOR);
      break;
      }
    default:
      jj_la1[19] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void declaracaoVariavel() throws ParseException {
    tipoDado();
    jj_consume_token(IDENTIFICADOR);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ATRIBUICAO:{
      jj_consume_token(ATRIBUICAO);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CARACTERE:{
        jj_consume_token(CARACTERE);
        break;
        }
      case DIGITO:{
        numero();
        break;
        }
      default:
        jj_la1[20] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      break;
      }
    default:
      jj_la1[21] = jj_gen;
      ;
    }
    label_8:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case SEPARADOR:{
        ;
        break;
        }
      default:
        jj_la1[22] = jj_gen;
        break label_8;
      }
      jj_consume_token(SEPARADOR);
      jj_consume_token(IDENTIFICADOR);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case ATRIBUICAO:{
        jj_consume_token(ATRIBUICAO);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case CARACTERE:{
          jj_consume_token(CARACTERE);
          break;
          }
        case DIGITO:{
          numero();
          break;
          }
        default:
          jj_la1[23] = jj_gen;
          jj_consume_token(-1);
          throw new ParseException();
        }
        break;
        }
      default:
        jj_la1[24] = jj_gen;
        ;
      }
    }
    jj_consume_token(FIMINSTRUCAO);
  }

  static final public void string() throws ParseException {
    jj_consume_token(ISTRING);
    label_9:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DIGITO:
      case CARACTERE:{
        ;
        break;
        }
      default:
        jj_la1[25] = jj_gen;
        break label_9;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case CARACTERE:{
        jj_consume_token(CARACTERE);
        break;
        }
      case DIGITO:{
        jj_consume_token(DIGITO);
        break;
        }
      default:
        jj_la1[26] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
    jj_consume_token(ISTRING);
  }

  static final public void numero() throws ParseException {
    label_10:
    while (true) {
      jj_consume_token(DIGITO);
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case DIGITO:{
        ;
        break;
        }
      default:
        jj_la1[27] = jj_gen;
        break label_10;
      }
    }
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DECIMAL:{
      jj_consume_token(DECIMAL);
      label_11:
      while (true) {
        jj_consume_token(DIGITO);
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case DIGITO:{
          ;
          break;
          }
        default:
          jj_la1[28] = jj_gen;
          break label_11;
        }
      }
      break;
      }
    default:
      jj_la1[29] = jj_gen;
      ;
    }
  }

  static final public void bool() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case TRUE:{
      jj_consume_token(TRUE);
      break;
      }
    case FALSE:{
      jj_consume_token(FALSE);
      break;
      }
    default:
      jj_la1[30] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void dado() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case DIGITO:{
      numero();
      break;
      }
    case ISTRING:{
      string();
      break;
      }
    case TRUE:
    case FALSE:{
      bool();
      break;
      }
    default:
      jj_la1[31] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void tipoDado() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case REAL:{
      jj_consume_token(REAL);
      break;
      }
    case INTEIRO:{
      jj_consume_token(INTEIRO);
      break;
      }
    case LETRA:{
      jj_consume_token(LETRA);
      break;
      }
    case STRING:{
      jj_consume_token(STRING);
      break;
      }
    case BOOLEAN:{
      jj_consume_token(BOOLEAN);
      break;
      }
    default:
      jj_la1[32] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static private boolean jj_initialized_once = false;
  /** Generated Token Manager. */
  static public MALanguageTokenManager token_source;
  static SimpleCharStream jj_input_stream;
  /** Current token. */
  static public Token token;
  /** Next token. */
  static public Token jj_nt;
  static private int jj_ntk;
  static private int jj_gen;
  static final private int[] jj_la1 = new int[33];
  static private int[] jj_la1_0;
  static private int[] jj_la1_1;
  static {
      jj_la1_init_0();
      jj_la1_init_1();
   }
   private static void jj_la1_init_0() {
      jj_la1_0 = new int[] {0x3818be00,0x3818be00,0x40088000,0x40088000,0x40000,0x40088000,0x28003e00,0x28003e00,0x28003e00,0x28003e00,0x200000,0x88000,0x3818be00,0x80,0x88000,0x3818be00,0x28000000,0x88000,0x6000000,0x88000,0x18000,0x20000,0x40000,0x18000,0x20000,0x18000,0x18000,0x8000,0x8000,0x1000000,0x0,0x40008000,0x3e00,};
   }
   private static void jj_la1_init_1() {
      jj_la1_1 = new int[] {0x0,0x0,0x3,0x3,0x0,0x3,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x0,0x3,0x3,0x0,};
   }

  /** Constructor with InputStream. */
  public MALanguage(java.io.InputStream stream) {
     this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public MALanguage(java.io.InputStream stream, String encoding) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser.  ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source = new MALanguageTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 33; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream) {
     ReInit(stream, null);
  }
  /** Reinitialise. */
  static public void ReInit(java.io.InputStream stream, String encoding) {
    try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 33; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public MALanguage(java.io.Reader stream) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    jj_input_stream = new SimpleCharStream(stream, 1, 1);
    token_source = new MALanguageTokenManager(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 33; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  static public void ReInit(java.io.Reader stream) {
    jj_input_stream.ReInit(stream, 1, 1);
    token_source.ReInit(jj_input_stream);
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 33; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public MALanguage(MALanguageTokenManager tm) {
    if (jj_initialized_once) {
      System.out.println("ERROR: Second call to constructor of static parser. ");
      System.out.println("       You must either use ReInit() or set the JavaCC option STATIC to false");
      System.out.println("       during parser generation.");
      throw new Error();
    }
    jj_initialized_once = true;
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 33; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(MALanguageTokenManager tm) {
    token_source = tm;
    token = new Token();
    jj_ntk = -1;
    jj_gen = 0;
    for (int i = 0; i < 33; i++) jj_la1[i] = -1;
  }

  static private Token jj_consume_token(int kind) throws ParseException {
    Token oldToken;
    if ((oldToken = token).next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    if (token.kind == kind) {
      jj_gen++;
      return token;
    }
    token = oldToken;
    jj_kind = kind;
    throw generateParseException();
  }


/** Get the next Token. */
  static final public Token getNextToken() {
    if (token.next != null) token = token.next;
    else token = token.next = token_source.getNextToken();
    jj_ntk = -1;
    jj_gen++;
    return token;
  }

/** Get the specific Token. */
  static final public Token getToken(int index) {
    Token t = token;
    for (int i = 0; i < index; i++) {
      if (t.next != null) t = t.next;
      else t = t.next = token_source.getNextToken();
    }
    return t;
  }

  static private int jj_ntk_f() {
    if ((jj_nt=token.next) == null)
      return (jj_ntk = (token.next=token_source.getNextToken()).kind);
    else
      return (jj_ntk = jj_nt.kind);
  }

  static private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  static private int[] jj_expentry;
  static private int jj_kind = -1;

  /** Generate ParseException. */
  static public ParseException generateParseException() {
    jj_expentries.clear();
    boolean[] la1tokens = new boolean[34];
    if (jj_kind >= 0) {
      la1tokens[jj_kind] = true;
      jj_kind = -1;
    }
    for (int i = 0; i < 33; i++) {
      if (jj_la1[i] == jj_gen) {
        for (int j = 0; j < 32; j++) {
          if ((jj_la1_0[i] & (1<<j)) != 0) {
            la1tokens[j] = true;
          }
          if ((jj_la1_1[i] & (1<<j)) != 0) {
            la1tokens[32+j] = true;
          }
        }
      }
    }
    for (int i = 0; i < 34; i++) {
      if (la1tokens[i]) {
        jj_expentry = new int[1];
        jj_expentry[0] = i;
        jj_expentries.add(jj_expentry);
      }
    }
    int[][] exptokseq = new int[jj_expentries.size()][];
    for (int i = 0; i < jj_expentries.size(); i++) {
      exptokseq[i] = jj_expentries.get(i);
    }
    return new ParseException(token, exptokseq, tokenImage);
  }

  /** Enable tracing. */
  static final public void enable_tracing() {
  }

  /** Disable tracing. */
  static final public void disable_tracing() {
  }

}
